# Earthquake-Monitor

./: CMakeLists.txt  CombinedNotification.h  ConsoleNotification.h  EarthquakeFetcher.h  EarthquakeMonitor.h  EarthquakeNotification.h  FileNotification.h  README.md  main.cpp
earthquake-monitor/: package-lock.json  package.json
earthquake-monitor/src/: App.js
earthquake-monitor/src/components/: EarthquakeLogs.js  MonitorControl.js
